Add reasoning functionality and tests for V1Controller and ReasoningService
- Implemented V1Controller with reasoning capabilities for chat completions.
- Added unit tests for V1Controller to validate reasoning processing and token counting.
- Developed ReasoningService to handle extraction and processing of reasoning content.
- Created comprehensive tests for ReasoningService covering various reasoning patterns and token counting.
- Enhanced error handling and logging within the reasoning processing methods.

--- a/.gitignore
+++ b/.gitignore
@@ -369,8 +369,8 @@ FodyWeavers.xsd
 /BUILD.md
 
 output/
-/src/LMSupplyDepots.External.OpenAI.SampleConsoleApp/secrets.json
-/src/LMSupplyDepots.External.OpenAI.SampleConsoleApp/secrets.json
 .github/copilot-instructions.md
+.claude/
+claudedocs/
 
-docs/open-ai-docs/
+secrets.json
