Update hostapp workflow to use Directory.Build.props version
Changes:
- Trigger on Directory.Build.props changes instead of manual tags
- Add workflow_dispatch for manual execution
- Extract version from <Version> tag in Directory.Build.props
- Auto-generate tag as "v{version}" format

Workflow now automatically triggers when:
1. src/Directory.Build.props is updated on main branch
2. Manually dispatched from GitHub Actions UI

Version detection: Reads <Version>0.2.2</Version> from XML
Generated tag: v0.2.2 (instead of hostapp_v0.2.2)

--- a/.github/workflows/hostapp.yml
+++ b/.github/workflows/hostapp.yml
@@ -3,8 +3,11 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - 'hostapp_v*'
+    branches:
+      - main
+    paths:
+      - 'src/Directory.Build.props'
+  workflow_dispatch:
 
 jobs:
   build-and-release:
@@ -34,20 +37,23 @@ jobs:
       run: |
         dotnet publish src/LMSupplyDepots.HostApp/LMSupplyDepots.HostApp.csproj -c Release -o output/host-app
     
-    - name: Get version from tag
+    - name: Extract version from Directory.Build.props
       id: version
       run: |
-        $tag = $env:GITHUB_REF -replace 'refs/tags/', ''
-        if ($tag -match '^hostapp_v(.+)$') {
-          $version = $matches[1]
-        } elseif ($tag -match '^v(.+)$') {
-          $version = $matches[1]
-        } else {
-          $version = $tag
+        [xml]$buildProps = Get-Content "src/Directory.Build.props"
+        $version = $buildProps.Project.PropertyGroup.Version
+
+        if ([string]::IsNullOrEmpty($version)) {
+          Write-Error "Could not extract version from Directory.Build.props"
+          exit 1
         }
+
+        $tag = "v$version"
+
         echo "VERSION=$version" >> $env:GITHUB_OUTPUT
         echo "TAG=$tag" >> $env:GITHUB_OUTPUT
-        echo "Version: $version, Tag: $tag"
+        echo "Extracted Version: $version"
+        echo "Generated Tag: $tag"
       shell: powershell
       
     - name: Discover runtime platforms
